--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -1,21 +1,70 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top js-header">
-    <a class="navbar-brand font-weight-bolder mr-3" href="index.html">
-    	Nav Bar
-    </a>
-    <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-default" aria-controls="navbars-default" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbars-default">
-        <ul class="navbar-nav ml-auto align-items-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Link 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#">Link 3</a>
-            </li>
-        </ul>
+    <!--====== HEADER PART START ======-->
+    <header class="header-area">
+        <div class="navbar-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/logo/logo.svg" alt="Logo" />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="toggler-icon"> </span>
+              <span class="toggler-icon"> </span>
+              <span class="toggler-icon"> </span>
+            </button>
+
+            <div
+              class="collapse navbar-collapse sub-menu-bar"
+              id="navbarSupportedContent"
+            >
+              <ul id="nav" class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="page-scroll active" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="page-scroll" href="#features">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="page-scroll" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="page-scroll" href="#facts">Why</a>
+                </li>
+                <li class="nav-item">
+                  <a href="javascript:void(0)">Team</a>
+                </li>
+                <li class="nav-item">
+                  <a href="javascript:void(0)">Blog</a>
+                </li>
+              </ul>
+            </div>
+            <!-- navbar collapse -->
+
+            <div class="navbar-btn d-none d-sm-inline-block">
+              <a
+                class="main-btn"
+                data-scroll-nav="0"
+                href="https://uideck.com/templates/basic/"
+                rel="nofollow"
+              >
+                Download Now
+              </a>
+            </div>
+          </nav>
+          <!-- navbar -->
+        </div>
+      </div>
+      <!-- row -->
     </div>
-</nav>
+    <!-- container -->
+  </div>
+  <!-- navbar area -->
