add back to the top

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,6 +6,11 @@
         </p>
     </div>
 </footer>
+
+     <!--====== BACK TOP TOP PART START ======-->
+     <a href="#" class="back-to-top"> <i class="lni lni-chevron-up"> </i> </a>
+     <!--====== BACK TOP TOP PART ENDS ======-->
+
 <!-- build:js -->
 <script src="{{root}}assets/vendor/js/jquery.js"></script>
 <script src="{{root}}assets/vendor/js/popper.js"></script>
